<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditText
        android:id="@+id/saveDialog_textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/saveDialog_textbox"
        >
        <TextView
            android:id="@+id/saveDialog_azimuth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/azimuth"
            />
        <TextView
            android:id="@+id/saveDialog_pitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pitch"
            />
        <TextView
            android:id="@+id/saveDialog_roll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/roll"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>