<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.MeasurementFragment">

<!--    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/angleUnit"
        android:id="@+id/angleDisplayText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" /> -->

    <TextView
        android:id="@+id/angleDisplayText"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="120dp"
        android:layout_height="200dp"
        android:background="@drawable/box"
        android:gravity="center"
        android:text="@string/angleUnit"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="170dp"
        android:layout_height="50dp"
        android:background="@drawable/box"
        android:backgroundTint="@color/main_accent_disabled"
        android:gravity="center"
        android:text="@string/reset"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />
    <!-- android:autoSizeTextType="uniform" -->

<!--    <Button
        android:layout_width="match_parent"
        android:layout_marginHorizontal="170dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" /> -->

    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="120dp"
        android:layout_height="70dp"
        android:background="@drawable/box"
        android:gravity="center"
        android:text="@string/angleUnit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="120dp"
        android:layout_height="70dp"
        android:background="@drawable/box"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />
    <!-- android:autoSizeTextType="uniform" -->

    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="170dp"
        android:layout_height="50dp"
        android:background="@drawable/box"
        android:backgroundTint="@color/main_accent_disabled"
        android:gravity="center"
        android:text="@string/angleUnit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>